--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '2'
 services:
     page:
-        image: jekyll/jekyll:4
+        build:
+          context: .
         container_name: asociacija_page
         ports:
           - 4000:4000
         volumes:
           - .:/srv/jekyll
-        command: jekyll serve -I
